--- a/compose.yaml
+++ b/compose.yaml
@@ -10,7 +10,7 @@ services:
     ports:
       - 4000:4000
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/postgres?schema=public
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/taskmanager?schema=public
     depends_on:
       - db
   db:
