--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,8 @@
   "main": "dist/index.js",
   "scripts": {
     "ts": "tsc --watch",
-    "server": "nodemon dist/index.js"
+    "devServer": "tsc --watch & nodemon dist/index.js",
+    "server": "tsc --watch & node dist/index.js"
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
