--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,8 @@
   "main": "dist/index.js",
   "scripts": {
     "ts": "tsc --watch",
-    "devServer": "tsc --watch & nodemon dist/index.js",
+    "dev": "nodemon dist/index.js",
+    "tsdev": "npm run ts ; npm run dev",
     "server": "tsc --watch & node dist/index.js"
   },
   "dependencies": {
