--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "react": "^18.3.1",
@@ -19,12 +20,14 @@
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
